[package]
name = "oxidized_os"
authors = ["Will Hopkins <willothyh@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "oxidized_os"
test = false
bench = false

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.18"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]


